--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LoginActivity">
         <activity android:name=".DetailActivity"></activity>
-        <activity android:name=".activity_login" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
